<resources>
    <string name="app_name">Acontece na Cidade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to evento lista -->
    <string name="event_name">Nome do Evento</string>
    <string name="event_dt_inicio">17/05/2017</string>
    <string name="data">Data</string>
    <string name="imagem_do_evento">Imagem do Evento</string>
    <string name="ok_button">OK</string>


    <!-- Strings related to Usuario -->
    <string name="user_name">Nome</string>
    <string name="user_email">E-mail</string>
    <string name="user_pass">Senha</string>
    <string name="user_confirm_pass">Consfirmar Senha</string>


    <!-- String related Textos Genéricos-->
    <string name="btn_salvar">Salvar</string>


</resources>
