<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="progweb3.acontecenacidade.CadastraUsuarioFormActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/user_name"
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_email"
        android:hint="@string/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_pass"
        android:hint="@string/user_pass"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_confirm_pass"
        android:hint="@string/user_confirm_pass"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

</LinearLayout>
