<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="progweb3.acontecenacidade.EventosListaFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="51dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagem_do_evento" />

    <EditText
        android:id="@+id/eventoNome"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/event_name"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView" />

    <EditText
        android:id="@+id/eventoDtInicio"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/event_dt_inicio"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/eventoNome"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/eventoNome" />

    <EditText
        android:id="@+id/dataLabel"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/data"
        app:layout_constraintRight_toLeftOf="@+id/eventoDtInicio"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/eventoDtInicio"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/eventoNome"
        android:layout_marginRight="4dp" />

    <ImageButton
        android:id="@+id/addBotao"
        android:layout_width="85dp"
        android:layout_height="74dp"
        app:srcCompat="@drawable/confirm2"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/ok_button" />

</android.support.constraint.ConstraintLayout>
