<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imagem_do_evento"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/eventoNome"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/event_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventoDtInicio"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignEnd="@+id/eventoNome"
        android:layout_alignLeft="@+id/eventoNome"
        android:layout_alignRight="@+id/eventoNome"
        android:layout_alignStart="@+id/eventoNome"
        android:layout_below="@+id/eventoNome"
        android:ems="10"
        android:inputType="date"
        android:text="@string/event_dt_inicio"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/eventoNome"
        app:layout_constraintTop_toBottomOf="@+id/eventoNome"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</RelativeLayout>